# enclave-os-mini

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  REPRODUCIBLE-BUILDS.md  SECURITY.md  THIRD-PARTY-LICENSES  rust-toolchain.toml
.github/workflows/: release.yml
app/: Cargo.toml  build.rs
app/src/: lib.rs
cmake/: RustBuild.cmake  SgxConfig.cmake
common/: Cargo.toml
common/src/: aead.rs  attestation_servers.rs  channel.rs  dependencies.rs  hex.rs  jwks.rs  jwt.rs  lib.rs  modules.rs  ocall.rs  oidc.rs  oids.rs  protocol.rs  queue.rs  quote.rs  rpc.rs  types.rs
config/: enclave.config.release.xml  enclave.config.xml
crates/enclave-os-app-auth/: Cargo.toml
crates/enclave-os-app-auth/src/: lib.rs  roles.rs
crates/enclave-os-egress/: Cargo.toml
crates/enclave-os-egress/src/: attestation.rs  client.rs  jwks.rs  lib.rs  oidc_bootstrap.rs
crates/enclave-os-fido2/: Cargo.toml
crates/enclave-os-fido2/src/: challenge.rs  credentials.rs  lib.rs  sessions.rs  types.rs  webauthn.rs
crates/enclave-os-kvstore/: Cargo.toml
crates/enclave-os-kvstore/src/: lib.rs  sealed.rs
crates/enclave-os-vault/: Cargo.toml  README.md
crates/enclave-os-vault/src/: audit.rs  crypto.rs  grant.rs  lib.rs  policy.rs  quote.rs  signing.rs  types.rs
crates/enclave-os-vault/tests/: oidc_step_up.rs  two_phase.rs
crates/enclave-os-wasm/: Cargo.toml  README.md
crates/enclave-os-wasm/sdk/: README.md  README.wit
crates/enclave-os-wasm/sdk/wit/: enclave-os.wit  world.wit
crates/enclave-os-wasm/src/: enclave_sdk.wit  engine.rs  jwks_fetcher.rs  lib.rs  metrics.rs  protocol.rs  registry.rs  sgx_platform.rs  vaultkey.rs  wasm_docs.rs
crates/enclave-os-wasm/src/enclave_sdk/: attestation.rs  auth.rs  crypto.rs  https.rs  keystore.rs  mod.rs
crates/enclave-os-wasm/src/wasi/: cli.rs  filesystem.rs  io.rs  mod.rs  sockets.rs
crates/enclave-os-wasm/tools/wasm-compile/: Cargo.toml
crates/enclave-os-wasm/tools/wasm-compile/src/: main.rs
docker/: Dockerfile.build  build-enclave.sh
docs/: api-testing-ui.md  api.md  architecture.md  attestation-ui.md  auditable-config.md  building.md  dev-certificates.md  layer4-proxy.md  ra-tls.md  vault.md  wasm-runtime.md  wasm-sdk.md  wasmtime-fork.md
edl/: CMakeLists.txt  enclave_os.edl
enclave/: CMakeLists.txt  Cargo.toml  build.rs
enclave/src/: config_merkle.rs  cpuid_cache.rs  ecall.rs  encauth.rs  getrandom_shim.c  lib.rs  ocall.rs  rpc_client.rs  sealed_config.rs  sessionrelay.rs  vaultkey.rs
enclave/src/crypto/: aead.rs  mod.rs  sealing.rs
enclave/src/modules/: helloworld.rs  mod.rs
enclave/src/ratls/: attestation.rs  cert_store.rs  mod.rs  server.rs  session.rs
examples/wasm-enclave/: Cargo.toml  README.md
examples/wasm-enclave/src/: lib.rs
host/: CMakeLists.txt  Cargo.toml  build.rs
host/src/: dcap.rs  dispatcher.rs  enclave.rs  main.rs  ocall_impl.rs  tcp_proxy.rs
host/src/kvstore/: mod.rs  storage.rs
host/src/net/: listener.rs  mod.rs
scripts/: extract-mrenclave.sh
tests/: CMakeLists.txt  debug_wasm_load.py  test_close_vs_noclose.py  test_echo_sizes.py  test_http_wasm.py
tests/certificates/: README.md  privasys.intermadiate-ca.dev.crt  privasys.root-ca.dev.crt
tests/integration/: Cargo.toml
tests/integration/src/: config_merkle.rs  integration.rs  per_app_encryption.rs  per_app_identity.rs
tests/wasm-docs-unit/: Cargo.toml
tests/wasm-docs-unit/src/: lib.rs
tools/wasm-precompile/: Cargo.toml
tools/wasm-precompile/src/: main.rs
wasm-app-explorer/: README.md  explorer.js  index.html  style.css
