# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "enclave-os-app"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Enclave OS application entry point — loads WASM apps and starts the enclave."

# Static library linked into enclave.so by CMake.
# The lib name MUST match what CMakeLists.txt expects.
[lib]
name = "enclave_os_app"
crate-type = ["staticlib"]

[features]
default = ["sgx"]
sgx = []

[dependencies]
# Enclave core — WITHOUT default-ecall (we provide our own ecall_run)
enclave-os-enclave = { path = "../enclave", default-features = false, features = ["sgx"] }
enclave-os-common = { path = "../common" }

# WASM runtime
enclave-os-wasm = { path = "../crates/enclave-os-wasm" }

[profile.release]
opt-level = "s"
codegen-units = 1
strip = "symbols"

# Override crates.io getrandom with vendored SGX-compatible copy
[patch.crates-io]
getrandom = { path = "../vendor/getrandom" }
