# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "enclave-os-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and protocol definitions for enclave-os-mini"

[features]
default = ["std"]
std = []
# When building for the enclave (no_std), disable std
sgx = []
# Cryptographic primitives (ring) — used by quote::compute_report_data_hash
crypto = ["dep:ring"]
# JWT verification & encoding (ECDSA P-256 / ES256)
jwt = ["crypto", "dep:base64"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
httparse = { version = "1", default-features = false }

# Optional: only pulled in when the `jwt` feature is enabled
ring       = { version = "0.17", optional = true }
base64     = { version = "0.21", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
ring = "0.17"
base64 = "0.21"
