# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "enclave-os-enclave"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Enclave-side trusted code for enclave-os"

# This crate builds as a static library that gets linked into the enclave .so.
# The rlib target is also needed so that dependent Rust crates (kvstore,
# wasm, adopter projects) can link against it during compilation.
[lib]
name = "enclave_os_enclave"
crate-type = ["staticlib", "rlib"]

[features]
default = ["sgx", "default-ecall"]
sgx = []
# Provides the default ecall_run implementation (HelloWorld only).
# Disable this to provide a custom ecall_run for module registration.
default-ecall = []
# Mock mode for development/testing on platforms without SGX
mock = []

[dependencies]
# Common types
enclave-os-common = { path = "../common" }

# Teaclave SGX SDK – trusted libraries (Privasys fork with Rust 1.84 + SGX 2.25 patches)
# NOTE: sgx_tstd is provided by the custom sysroot (rustlib/std), NOT as a crate dep.
# NOTE: sgx_types and sgx_trts are also provided by the sysroot. Do NOT add them here
#       or you get "two versions of sgx_types" errors. Use `extern crate sgx_types;` in code.
sgx_tseal  = { git = "https://github.com/Privasys/teaclave-sgx-sdk", branch = "main" }
sgx_tse    = { git = "https://github.com/Privasys/teaclave-sgx-sdk", branch = "main" }

# Lightweight TLS – rustls is a pure-Rust TLS 1.3 library.
# In SGX we use ring for crypto (it has SGX support via teaclave).
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
# webpki for certificate verification
webpki = { package = "rustls-webpki", version = "0.102", default-features = false, features = ["ring", "alloc", "std"] }
# ring for low-level crypto (AEAD, key generation)
ring = "0.17"
# getrandom 0.2 (pulled by ring) selects its Linux backend on the Teaclave
# target (target_os="linux").  Our C shim (src/getrandom_shim.c) intercepts
# syscall(SYS_getrandom) and routes it to sgx_read_rand.
getrandom = { version = "0.2", features = ["rdrand"] }
# For RA-TLS certificate generation
rcgen = { version = "0.13", default-features = false, features = ["ring", "x509-parser"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pin transitive deps that shipped edition2024 (requires Rust 1.85+)
time-core = ">=0.1, <0.1.8"

[profile.release]
opt-level = "s"        # optimize for size
codegen-units = 1       # single CGU → better inlining, smaller binary
strip = "symbols"       # strip debug symbols from .a
# NOTE: LTO is disabled because the SGX sysroot rlibs lack LLVM bitcode sections.
# NOTE: Do NOT set panic="abort" — the SGX sysroot provides its own panic_abort
# crate with a custom strategy. Setting it here causes a conflict.

[build-dependencies]
cc = "1"

