# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "enclave-os-app-auth"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Per-app role-based access control for enclave-os WASM apps."

[lib]
name = "enclave_os_app_auth"

[dependencies]
enclave-os-kvstore = { path = "../enclave-os-kvstore" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
