# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "enclave-os-egress"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "HTTPS egress module for enclave-os — outbound TLS from inside SGX."

[lib]
name = "enclave_os_egress"

[features]
# Mock mode — accepts MOCK_QUOTE: prefixed quotes without verification.
# Only enable for development/testing on platforms without SGX hardware.
mock = []

[dependencies]
# Shared types, module trait, and OCall vtable
enclave-os-common = { path = "../../common", features = ["crypto"] }

# TLS (Privasys fork with RA-TLS 0xFFBB challenge extension)
rustls = { git = "https://github.com/Privasys/rustls", tag = "privasys-v0.1.0", default-features = false, features = ["ring", "tls12", "std"] }
rustls-pemfile = "2"

# Crypto (for CA bundle hashing + ReportData verification)
ring = "0.17"

# Certificate parsing (for RA-TLS quote extraction + ReportData verification)
x509-parser = "0.16"

# Attestation server verification (JSON request/response)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
