# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "enclave-os-fido2"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "FIDO2/WebAuthn module for enclave-os — hardware-bound authentication inside SGX."

[lib]
name = "enclave_os_fido2"

[dependencies]
# Shared types, module trait, OCall vtable
enclave-os-common = { path = "../../common", features = ["crypto"] }

# KV store for persisting FIDO2 credentials (sealed with MRENCLAVE-bound key)
enclave-os-kvstore = { path = "../enclave-os-kvstore" }

# Crypto (P-256 ECDSA verification, SHA-256, RNG for challenges/tokens)
ring = "0.17"

# Serialization for wire protocol + credential storage
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CBOR parsing for WebAuthn attestation objects and authenticator data
ciborium = "0.2"

# Base64url encoding/decoding for WebAuthn payloads
base64 = "0.21"
