# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "enclave-os-kvstore"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Sealed KV store module for enclave-os — AES-256-GCM encrypted storage inside SGX."

[lib]
name = "enclave_os_kvstore"

[dependencies]
# Shared types, module trait, OCall vtable, and AEAD cipher
enclave-os-common = { path = "../../common", features = ["crypto"] }

# Crypto (HMAC for deterministic key name obfuscation)
ring = "0.17"
