# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "enclave-os-vault"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Secret store/fetch module for enclave-os — JWT-gated storage inside SGX."

[lib]
name = "enclave_os_vault"

[dependencies]
# Shared types, module trait, and OCall vtable
enclave-os-common  = { path = "../../common", features = ["jwt"] }

# KV store for persisting secrets (sealed with MRENCLAVE-bound key)
enclave-os-kvstore = { path = "../enclave-os-kvstore" }

# Outbound HTTPS + attestation server verification
enclave-os-egress = { path = "../enclave-os-egress" }

# JWT payload types
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64url decoding of secret payloads
base64 = "0.21"

# X.509 certificate parsing (extract quote + OID extensions from peer certs)
x509-parser = "0.16"
