# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "enclave-os-vault"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "vHSM-style key store for enclave-os — policy-gated keys with OIDC + RA-TLS principals."

[lib]
name = "enclave_os_vault"

[features]
# Forward mock to the egress crate (accepts MOCK_QUOTE: prefixed quotes)
mock = ["enclave-os-egress/mock"]

[dependencies]
# Shared types, module trait, OIDC claims, quote primitives
enclave-os-common  = { path = "../../common", features = ["jwt"] }

# Sealed KV store for persisted KeyRecords (MRENCLAVE-bound seal key)
enclave-os-kvstore = { path = "../enclave-os-kvstore" }

# Attestation server verification of remote TEE quotes (Principal::Tee)
enclave-os-egress = { path = "../enclave-os-egress" }

# Wire protocol + persisted records are JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64url decoding of CreateKey material
base64 = "0.21"

# X.509 parsing for peer-cert quote + OID claim extraction
x509-parser = "0.16"

# In-enclave crypto: AES-256-GCM (Wrap/Unwrap), HMAC-SHA-256 (Mac),
# ECDSA-P256 (Sign + ApprovalToken issue/verify). Same version as the
# rest of the workspace; pulled transitively via enclave-os-common too.
ring = "0.17"
